manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-prototype
  labels:
    app: java-prototype
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: java-prototype
